# ritalin

./: CMakeLists.txt  Makefile  imgui.ini
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
example/: cube.hpp  main.cpp
example/shader/: cube.fs  cube.vs
headers/: camera.hpp  imgui.hpp  model.hpp  texture.hpp
shader/: model.vs
src/: camera.cpp  imgui.cpp  model.cpp  sprite.cpp  texture.cpp
